translation-tool/inputs/source_meta/objects/YAHS_Broadcast_Mapping__c.object
<CustomObject>
    <description>This serves as a junction Object to store data mapping between Broadcast and SP,Gateway locations,Gateways,Beam-Ids and Cases</description>
    <fields>
        <fullName>Broadcast_Message__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Broadcast Message</label>
        <referenceTo>YAHS_BroadcastMessage__c</referenceTo>
        <relationshipLabel>Broadcast Mappings</relationshipLabel>
        <relationshipName>Broadcast_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gateway_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gateway Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broadcast Mappings (Gateway Location)</relationshipLabel>
        <relationshipName>Broadcast_Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gateway</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Broadcast Mappings</relationshipLabel>
        <relationshipName>Broadcast_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Satellite_Beam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Satellite Beam</label>
        <referenceTo>Satelite_Beams__c</referenceTo>
        <relationshipLabel>Broadcast Mappings</relationshipLabel>
        <relationshipName>Broadcast_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broadcast Mappings</relationshipLabel>
        <relationshipName>Broadcast_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Broadcast Mapping</label>
    <nameField>
        <displayFormat>BMap-{0000}</displayFormat>
        <label>BMapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broadcast Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>